fixes some main page styling and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -99,19 +99,27 @@ body {
   color: #1a1e21;
 }
 
-.container {
+.main-container {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .info-container {
+  margin: 0;
   margin-top: 50px;
   display: flex;
-  width: 100%;
+  justify-content: space;
+  width: 90%;
 }
 
+.top-repo-container {
+  display: flex;
+  justify-content: center;
+}
 .top-language-container {
-  margin-left: 8%;
+  margin-left: 2%;
 }
 
 .user-container {
@@ -186,6 +194,7 @@ body {
 .chart-container {
   display: flex;
   justify-content: space-evenly;
+  width: 100%;
 }
 
 .chart {
@@ -196,7 +205,7 @@ body {
   justify-content: space-around;
   flex-direction: column;
   width: 410px;
-  height: 550px;
+  height: 600px;
   border-radius: 10px;
   box-shadow: 10px 10px 18px -8px rgba(0, 0, 0, 1);
 }
@@ -220,7 +229,7 @@ body {
   background-color: #222a2d;
   border-radius: 10px;
   box-shadow: 10px 10px 18px -8px rgba(0, 0, 0, 1);
-  width: 80%;
+  width: 95%;
 }
 
 .repo-container h1 {
